[FIX] sign: fix spacing issue in send request wizard
closes odoo/enterprise#71350

--- a/sign/static/src/scss/sign_backend.scss
+++ b/sign/static/src/scss/sign_backend.scss
@@ -218,3 +218,9 @@
 .o_sign_template_tags_and_save .o_tags_input {
     width: 100%;
 }
+
+.o_sign_send_request {
+    .o_form_nosheet {
+        padding-top: 0;
+    }
+}
